Mi segundo commit, agregando etiquetas de formato.

--- a/Practica1.html
+++ b/Practica1.html
@@ -12,6 +12,7 @@
     <header></header>
         <section class="section">
                 <h1 id="titulo"> Norberto Maya Ramirez </h1>
+                <h1> Norberto Maya Ramirez </h1>
                 <h2> Norberto Maya Ramirez </h2>
                 <h3> Norberto Maya Ramirez </h3>
                 <h4> Norberto Maya Ramirez </h4>
@@ -23,11 +24,23 @@
                 <br>
                 <p id="parrafo"> Mi nombre es Norberto Maya Ramirez, mis amigos me dicen Betico, soy estudiante de Ingenieria en Sistemas Computacionales y 
                      Eléctronicos de la Universidad del Noreste. Me gusta ir al cine y comer. Tengo 20 años y cumplo años en Noviembre. </p> 
+                     <br>
         </section>
+
+        <section class="section2">
+            <h1> Mi historia</h1>
+            <p> Soy original de <i>Naranjos</i> una ciudad de veracruz. Aqui en <mark>Tampico</mark> llevó 2 años 
+                viviendo con mis abuelos. Un dia fui con una <em>amiga</em> a <b> Altama City Center</b>,
+                fuimos a <small>Degás Café </small>, ella pidio un cafe y yo un <sub>frapé</sub> pensando 
+                que era <strong>Chocolate</strong>. Cuando le di el primer trago casi <del>vomito</del> puesto
+                que <ins>No me gusta el café</ins>. Déspues fuimos por unas <sup>crepas</sup>.
+            </p>
+    </section>
+
 
         <style>
         .section{
-            background: yellowgreen;
+            background: white;
         }
         .section #titulo {
             color: blue;
