Commit etiquetas de formato final.

--- a/Practica1.html
+++ b/Practica1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Mi primera página web </title>
-    <link rel="shortcut icon" href="C:\Users\Norbe\Music\Pagina Web\Icono.jpg" type="image/x-icon" >
+    <link rel="shortcut icon" href="Icono.jpg" type="image/x-icon" >
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <h5> Norberto Maya Ramirez </h5>
                 <h6> Norberto Maya Ramirez </h6>
                 <center>
-                        <img src="C:\Users\Norbe\Music\Pagina Web\Beto.jpg" alt="Imagen" heigh="400" width="300"/>
+                        <img src="Beto.jpg" alt="Imagen" heigh="400" width="300"/>
                 </center>
                 <br>
                 <p id="parrafo"> Mi nombre es Norberto Maya Ramirez, mis amigos me dicen Betico, soy estudiante de Ingenieria en Sistemas Computacionales y 
