Commit de citas.

--- a/Practica1.html
+++ b/Practica1.html
@@ -11,7 +11,7 @@
 <body>
     <header></header>
         <section class="section">
-                <h1 id="titulo"> Norberto Maya Ramirez </h1>
+                <h1 id="titulo"> Mi primera página web </h1>
                 <h1> Norberto Maya Ramirez </h1>
                 <h2> Norberto Maya Ramirez </h2>
                 <h3> Norberto Maya Ramirez </h3>
@@ -19,16 +19,18 @@
                 <h5> Norberto Maya Ramirez </h5>
                 <h6> Norberto Maya Ramirez </h6>
                 <center>
-                        <img src="Beto.jpg" alt="Imagen" heigh="400" width="300"/>
+                        <img src="Beto.jpg" alt="Imagen" heigh="300" width="250"/>
                 </center>
                 <br>
-                <p id="parrafo"> Mi nombre es Norberto Maya Ramirez, mis amigos me dicen Betico, soy estudiante de Ingenieria en Sistemas Computacionales y 
-                     Eléctronicos de la Universidad del Noreste. Me gusta ir al cine y comer. Tengo 20 años y cumplo años en Noviembre. </p> 
-                     <br>
+                <p id="parrafo"> 
+                    Mi nombre es Norberto Maya Ramirez, mis amigos me dicen Betico, 
+                    soy estudiante de Ingenieria en Sistemas Computacionales y Eléctronicos de la Universidad del Noreste. 
+                    Me gusta ir al cine y comer. Tengo 20 años y cumplo años en Noviembre. 
+                </p> 
         </section>
 
-        <section class="section2">
-            <h1> Mi historia</h1>
+    <section class="section2">
+            <h1 id="titulo2"> Mi historia</h1>
             <p> Soy original de <i>Naranjos</i> una ciudad de veracruz. Aqui en <mark>Tampico</mark> llevó 2 años 
                 viviendo con mis abuelos. Un dia fui con una <em>amiga</em> a <b> Altama City Center</b>,
                 fuimos a <small>Degás Café </small>, ella pidio un cafe y yo un <sub>frapé</sub> pensando 
@@ -37,6 +39,18 @@
             </p>
     </section>
 
+    <section class ="Citas">
+        <h4>Citado largo</h4>
+        <blockquote cite = "https://hipertextual.com/archivo/2011/10/steve-jobs-una-biografia/" >
+            La pesadez de ser exitoso fue reemplazada por la liviandad de ser un principiante otra vez, menos seguro de todo. 
+            Me liberó para entrar en uno de los periodos más creativos de mi vida.
+        </blockquote>
+        <cite>Steve Jobs</cite>
+        <br>
+        <h4>Citado corto</h4>
+        <q>Solo sé que no sé nada.</q>
+        <cite>Sócrates</cite>
+    </section>
 
         <style>
         .section{
@@ -48,11 +62,17 @@
             font-weight: bold;
             text-align: center;
         }
+        .section2 #titulo2 {
+            color: darksalmon;
+            font-size: 25px;
+            text-align: center;
+        }
         .section #parrafo {
             color: black;
         }
         </style>
 </body>
+
 </html>
 
 
